--- a/Pigoen/Pigoen/Views/Shared/_LoginPartial.cshtml
+++ b/Pigoen/Pigoen/Views/Shared/_LoginPartial.cshtml
@@ -1,9 +1,9 @@
 @using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@*@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager*@
 
-<ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
+<ul class="navbar-nav">test
+@*if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
@@ -22,5 +22,5 @@ else
     <li class="nav-item">
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
-}
+}*@
 </ul>
