Added database project

--- a/Zebra/Zebra/Views/Home/ProductList.cshtml
+++ b/Zebra/Zebra/Views/Home/ProductList.cshtml
@@ -1,12 +1,4 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div>
-    <input placeholder="Wyszukaj..."/>
-</div>
-
-<div>
+﻿<div>
     <div>Mleko</div>
     <div>Mleko</div>
     <div>Mleko</div>
