--- a/Zebra/Zebra/wwwroot/css/site.css
+++ b/Zebra/Zebra/wwwroot/css/site.css
@@ -54,3 +54,16 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.home-page-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.product-list__row {
+    display: flex;
+}
+
+.home__lists {
+    display: flex;
+}
