--- a/Zebra/Zebra/Views/Home/Index.cshtml
+++ b/Zebra/Zebra/Views/Home/Index.cshtml
@@ -3,12 +3,15 @@
 }
 
 <div class="home-page-container">
-    <div>
-        <input id="search-input" placeholder="Wyszukaj..." />
+    <div class="home-tab home-tab--light">
+        <div class="tab-header">LISTA PRODUKTÓW</div>
+        <input id="search-input" placeholder="Wyszukaj..."/>
         <div id="productList"></div>
     </div>
-    <div>
+    <div class="home-tab home-tab--green">
+        <div class="tab-header">TWÓJ KOSZYK</div>
         <div id="shopping-card">
+            Tutaj pojawią się twoje produkty...
         </div>
     </div>
 </div>
